[package]
name = "gbm-sys"
version = "0.4.0"
authors = ["Drakulix (Victor Brekenfeld)"]
build = "build.rs"
description = "Bindgen generated unsafe libgbm wrapper"
documentation = "https://Drakulix.github.io/gbm.rs/gbm-sys"
repository = "https://github.com/Drakulix/gbm.rs/tree/master/gbm-sys"
keywords = ["gbm", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"
license-file = "../LICENSE"
edition = "2021"

[lib]
path = "src/lib.rs"

[build-dependencies.bindgen]
version = "0.69"

# Specify version of bindgen deps to fix `check-minimal` test
[build-dependencies]
pkg-config = "0.3.32"


[dependencies]
libc = "0.2"

